<resources>
    <string name="app_name">Book a Doctor</string>
    <string name="consult">Consult</string>
    <string name="doctor_name">Dr. Ion Popescu</string>
    <string name="random_name">Maria Popescu</string>
    <string name="medical_specialty">Oftalmologie</string>
    <string name="location_address">Clinica Regina Maria, Splaiul Independentei 345, Sector 6</string>
    <string name="date">15 Ianuarie 2018</string>
    <string name="time">15:30</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>

    <!-- Strings in SignUp Activity -->
    <string name="personal_data">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dob_format">DD/MM/YYYY</string>
    <string name="sex">Sex</string>
    <string name="address">Full address</string>
    <string name="address_fields">Str., Nr., Bl., Fl., Ap., City, County</string>
    <string name="phone">Phone</string>
    <string name="random_phone">+040788320948</string>

    <string name="ID_info">ID Information</string>
    <string name="security_number">Social Security Number</string>
    <string name="SSN_series">Series</string>
    <string name="SSN_number">Number</string>

    <string name="health_card_info">Health card information</string>
    <string name="insurance_code">Insurance code</string>

    <string name="account_info">Account Information</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirmation</string>

    <string name="medic_checkbox">I am a doctor and I can prove if necessary through CMR.</string>
    <string name="medic_info">Medic Information</string>
    <string name="specialty">Specialization</string>
    <string name="health_clinic_name">Health clinic</string>
    <string name="health_clinic_address">Health clinic address</string>

    <string name="confirm">I agree that my data to be processed and used for my own benefits and just my own.</string>
    <string name="terms_confirm">I agree with the term and conditions.</string>

    <!--Edit + cancel + save-->
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!--Appointment data-->
    <string name="add">New Appointment</string>
    <string name="doctor">Doctor</string>
    <string name="date_picker">Date</string>
    <string name="time_picker">Time</string>
    <string name="center">Health Center</string>
    <string name="obs">Observations</string>
    <string name="spec_name">Some specialization name</string>

    <!--Profile-->
    <string name="my_profile">My profile</string>

    <!--Dummy-->
    <string name="random_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
