<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardCornerRadius="4dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appointmentTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/consult"
                card_view:layout_constraintStart_toStartOf="@id/constraint"
                card_view:layout_constraintTop_toBottomOf="@id/constraint" />

            <TextView
                android:id="@+id/doctorNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/doctor_name"
                card_view:layout_constraintStart_toStartOf="@id/constraint"
                card_view:layout_constraintTop_toBottomOf="@id/appointmentTypeTextView" />

            <TextView
                android:id="@+id/medicalSpecialtyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/medical_specialty"
                card_view:layout_constraintStart_toStartOf="@id/constraint"
                card_view:layout_constraintTop_toBottomOf="@id/doctorNameTextView" />

            <TextView
                android:id="@+id/clinicAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/location_address"
                card_view:layout_constraintStart_toStartOf="@id/constraint"
                card_view:layout_constraintTop_toBottomOf="@id/medicalSpecialtyTextView"/>


            <TextView
                android:id="@+id/appointmentDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/date"
                card_view:layout_constraintEnd_toEndOf="@id/constraint"
                card_view:layout_constraintTop_toBottomOf="@id/constraint" />

            <TextView
                android:id="@+id/appointmentTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/time"
                card_view:layout_constraintEnd_toEndOf="@id/constraint"
                card_view:layout_constraintTop_toBottomOf="@id/appointmentDateTextView" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>