<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Nav Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/nav_bar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_cancel_tv"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edit_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/quick_sans_light"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/nav_bar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <!--Title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/title"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quick_sans_bold"
                    android:text="@string/add"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:id="@+id/activity_title"/>

            </LinearLayout>

            <!--Specialization-->
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:id="@+id/appointment_spec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="60dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specialty"
                    android:fontFamily="@font/quick_sans_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/specialization_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/specialty"
                        android:inputType="text"
                        app:layout_constraintTop_toTopOf="parent"
                        android:fontFamily="@font/quick_sans_light"
                        android:layout_weight="1"
                        android:spinnerMode="dialog"/>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:src="@drawable/ic_info"
                        android:id="@+id/spec_info_ib"/>
                </LinearLayout>
            </LinearLayout>

            <!--Doctor-->
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/appointment_spec"
                android:id="@+id/doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="40dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor"
                    android:fontFamily="@font/quick_sans_light"/>

                <Spinner
                    android:id="@+id/doctor_name_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:inputType="text"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/quick_sans_light"
                    android:layout_weight="1"/>
            </LinearLayout>

            <!--Date and time-->
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/doctor"
                android:id="@+id/date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingTop="40dp"
                android:paddingEnd="20dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/date">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/quick_sans_light"
                        android:text="@string/date_picker"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/date_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/quick_sans_light"
                        android:hint="@string/dob_format"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/time" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_sans_light"
                        android:text="@string/time_picker"
                        app:layout_constraintBottom_toTopOf="@+id/time_spinner"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/time_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/quick_sans_light"
                        android:hint="@string/time"
                        android:inputType="text"
                        android:spinnerMode="dialog"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.208" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <!--Health center-->
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/date_and_time"
                android:id="@+id/health_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="40dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/center"
                    android:fontFamily="@font/quick_sans_light"/>

                <Spinner
                    android:id="@+id/health_center_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quick_sans_light"
                    android:hint="@string/health_clinic_address"
                    android:inputType="text"
                    android:spinnerMode="dialog"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <!--Observations-->
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/health_center"
                android:id="@+id/observations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="40dp"
                android:paddingEnd="20dp"
                android:paddingBottom="80dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/obs"
                    android:fontFamily="@font/quick_sans_light"/>

                <EditText
                    android:id="@+id/observations_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/obs"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/quick_sans_light"
                    android:layout_weight="1"
                    android:minLines="1"
                    android:maxLines="5"
                    android:inputType="textMultiLine"/>
            </LinearLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/quick_sans_bold"
                android:text="Save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/observations"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>